--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Ubuntu:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="../src/css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../src/css/style.css" />
   </head>
-  <body>
+  <body class="theme-day body-font" style="padding: 1rem 3rem">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
