--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,8 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Ubuntu:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="../src/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../src/css/style.css" />
   </head>
-  <body class="theme-day body-font" style="padding: 1rem 3rem">
+  <body class="theme-day body-font">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
