creating Header and Filters without ThemeSwitch

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,9 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Ubuntu:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!--    <link rel="stylesheet" type="text/css" href="../src/normalize.css" />-->
   </head>
-  <body class="theme-day body-font">
+  <body class="theme-day">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
